@@ -1,0 +1,11 @@
+# This file has default settings applied by etomo when it puts out directives
+# for batch processing. The "extract" ones are temporary until etomo is fixed
+# to apply the user default
+setupset.copyarg.extract=1
+setupset.copyarg.bextract=1
+setupset.scanHeader=1
+runtime.Preprocessing.any.archiveOriginal=1
+comparam.track.beadtrack.RoundsOfTracking=4
+runtime.BeadTracking.any.numberOfRuns=2
+comparam.align.tiltalign.RobustFitting=1
+
